--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto Grupo Sordo</title>
+<link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h1>Prueba </h1>
-    <h2>prueba 2</h2>
-    <h2>prueba 3</h2>
+
+
+    <div class="card1"
+    style="left: 0px; top: 0px;">
+    </div>
+
+
 </body>
 </html>
