--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto Grupo Sordo</title>
-<link rel="stylesheet" href="./styles.css">
+<!-- <link rel="stylesheet" href="./styles.css"> -->
 </head>
 <body>
 
-    <div class="card1">
-        <div class="carafrente">
+    <div class="card1" id="cuerpo">
+        <div class="carafrente" id="caraFrente">
             <img src="https://scontent.fmex16-1.fna.fbcdn.net/v/t1.6435-9/109119284_1377724675760437_6163195043215968101_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=e3f864&_nc_ohc=jvrfgloWoVAAX8ypw9m&_nc_ht=scontent.fmex16-1.fna&oh=00_AT_V8QCwXVeZF9-Rir-X07RVckVpqU5E8MVgxGI2-pN4mQ&oe=625E6569" 
             alt="LSM ASL" style="width: 150px; height: 200px;">
         </div>
-        <div class="caraatras">
-            <img src="background-image: url(https://i.pinimg.com/236x/15/35/4c/15354cf0b58abb4b7f1047efeb240159.jpg);"
-            alt="LSM A" style="width: 150px; height: 200px;">
+        <div class="caraatras" id="caraAtras">
+            <!-- <img src="background-image: url(https://i.pinimg.com/236x/15/35/4c/15354cf0b58abb4b7f1047efeb240159.jpg);"
+            alt="LSM A" style="width: 150px; height: 200px;"> -->
         </div>
     </div>
-
+<script type="text/javascript" src="./juego_memoria.js"></script>
 </body>
 </html>
