--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <img src="https://scontent.fmex16-1.fna.fbcdn.net/v/t1.6435-9/109119284_1377724675760437_6163195043215968101_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=e3f864&_nc_ohc=jvrfgloWoVAAX8ypw9m&_nc_ht=scontent.fmex16-1.fna&oh=00_AT_V8QCwXVeZF9-Rir-X07RVckVpqU5E8MVgxGI2-pN4mQ&oe=625E6569" 
             alt="LSM ASL" style="width: 150px; height: 200px;">
         </div>
-        <div class="caraatras" id="caraAtras">
-            <!-- <img src="background-image: url(https://i.pinimg.com/236x/15/35/4c/15354cf0b58abb4b7f1047efeb240159.jpg);"
-            alt="LSM A" style="width: 150px; height: 200px;"> -->
+        <div class="caraatras" id="caraAtras" style="opacity:0%">
+<img src="https://i.pinimg.com/236x/15/35/4c/15354cf0b58abb4b7f1047efeb240159.jpg"
+            alt="LSM A" style="width: 150px; height: 200px;"> 
         </div>
     </div>
 <script type="text/javascript" src="./juego_memoria.js"></script>
